--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,7 @@
+html{
+  scroll-behavior: smooth;
+  scroll-padding-top: 150px;
+}
 body {
   font-family: "Inter", sans-serif;
 }
@@ -119,6 +123,10 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 15px 30px;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
 }
 .header-container {
   display: flex;
@@ -129,6 +137,25 @@ header {
   display: flex;
   gap: 20px;
   justify-content: center;
+}
+.main{
+  margin-top: 150px;
+}
+.to-top{
+  text-decoration: none;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: aqua;
+  color: black;
 }
 .navigation1 {
   font-family: var(--font-family);
